renable animations, fix a couple of bugs with z-index. use flex for forms

--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -10,45 +10,40 @@
 }
 
 @-webkit-keyframes clouds {
-    // from { left: -5%; }
-    // to { left: 100%; }
-}
-
-@-webkit-keyframes back-clouds {
-    // from { left: 100%; }
-    // to { left: -5%; }
+    0%, 100% { -webkit-transform: translateX(-50px); }
+    50% { -webkit-transform: translateX(2000px); }
 }
 
 @-webkit-keyframes ship {
-    // 0%, 100% {
-    //     -webkit-transform: rotate(-1deg);
-    // }
-    //
-    // 50% {
-    //     -webkit-transform: rotate(4deg);
-    // }
+    0%, 100% {
+        -webkit-transform: rotate(-1deg);
+    }
+
+    50% {
+        -webkit-transform: rotate(4deg);
+    }
 }
 
 @-webkit-keyframes login {
-    // 0%, 40%, 44%, 100% {
-    //     -webkit-transform: rotate(0deg);
-    // }
-    // 41% {
-    //     -webkit-transform: rotate(-3deg);
-    // }
-    // 43% {
-    //     -webkit-transform: rotate(3deg);
-    // }
+    0%, 40%, 44%, 100% {
+        -webkit-transform: rotate(0deg);
+    }
+    41% {
+        -webkit-transform: rotate(-3deg);
+    }
+    43% {
+        -webkit-transform: rotate(3deg);
+    }
 }
 
 @-webkit-keyframes nemo {
-    // 0%, 100% { -webkit-transform: rotate(-6deg); }
-    // 50% { -webkit-transform: rotate(-2deg); }
+    0%, 100% { -webkit-transform: rotate(-6deg); }
+    50% { -webkit-transform: rotate(-2deg); }
 }
 
 @-webkit-keyframes nemo-move {
-    // from { left: -5%; }
-    // to { left: 105%; }
+    from { left: -5%; }
+    to { left: 105%; }
 }
 
 @-webkit-keyframes loggedin-login {
